--- a/Peli/miinaharava.css
+++ b/Peli/miinaharava.css
@@ -63,10 +63,11 @@ body {
     color: gray;
 }
 
-#flag-button {
+#flag-button, #restart-button {
     width: 100px;
     height: 50px;
     font-size: 30px;
     background-color: lightgray;
     border: none;
 }
+
