--- a/Peli/miinaharava.css
+++ b/Peli/miinaharava.css
@@ -2,72 +2,72 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     text-align: center;
+    background-color: #e5e5e5; /* Optional background color for the body */
 }
 
 #board {
-    width: 400px;
-    height: 400px;
-    border: 10px solid darkgray;
+    border: 5px solid darkgray; /* Adjusted for a cleaner look */
     background-color: lightgray;
-
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
+    margin: 20px auto; /* Centering with some space */
+    display: grid;
+    grid-gap: 2px; /* Reduced space between cells */
+    padding: 10px; /* Adds padding inside the board */
 }
 
 #board div {
-    width: 48px;
-    height: 48px;
-    border: 1px solid whitesmoke;
-
-    /*Teksti*/
-    font-size: 30px;
+    width: 40px; /* Adjusted for better scaling */
+    height: 40px; /* Adjusted for better scaling */
+    border: 1px solid #bfbfbf; /* Lighter border for a cleaner look */
+    background-color: #d9d9d9; /* Slightly darker tile background */
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 20px; /* Reduced font size for better fitting */
+    transition: background-color 0.2s ease; /* Smooth transition for tile clicks */
 }
 
 .tile-clicked {
-    background: darkgrey;
+    background-color: darkgrey; /* Darker shade for clicked tiles */
 }
 
-.x1 {
-    color: blue;
+#settings-form input, #settings-form label {
+    padding: 5px;
+    margin: 4px;
+
 }
 
-.x2 {
-    color: green;
-}
-
-.x3 {
-    color: red;
-}
-
-.x4 {
-    color: navy;
-}
-
-.x5 {
-    color: brown;
-}
-
-.x6 {
-    color: teal;
-}
-
-.x7 {
-    color: black;
-}
-
-.x8 {
-    color: gray;
-}
+.x1 { color: blue; }
+.x2 { color: green; }
+.x3 { color: red; }
+.x4 { color: navy; }
+.x5 { color: brown; }
+.x6 { color: teal; }
+.x7 { color: black; }
+.x8 { color: gray; }
 
 #flag-button, #restart-button {
     width: 100px;
-    height: 50px;
-    font-size: 30px;
+    height: 40px;
+    font-size: 20px;
     background-color: lightgray;
     border: none;
+    margin: 10px;
+    cursor: pointer; /* Pointer cursor on hover */
+    border-radius: 5px;
 }
 
+#flag-button:hover, #restart-button:hover, #changes-button:hover {
+    background-color: darkgray;
+}
+
+#changes-button {
+    width: 200px;
+    height: 60px;
+    font-size: 20px;
+    background-color: lightgray;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    border: none;
+}
