--- a/Peli/miinaharava.css
+++ b/Peli/miinaharava.css
@@ -5,6 +5,16 @@ body {
     background-color: #e5e5e5; /* Optional background color for the body */
 }
 
+#js_timer {
+    text-align: center;
+}
+#timer {
+    background: #fff;
+    color: #000;
+    width: 100px;
+    margin: 0 auto;
+}
+
 tr, th{
     padding-right: 7px;
 }
